Complete base create issue

--- a/src/app/features/post-login/issue/create-issue/create-issue.component.html
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right" key="createIssue"></p-toast>
 <app-issue-inspector-popup
   (popupInspectorVisibleChange)="changeInspectorVisible()"
   [popupInspectorVisible]="popupInspectorVisible"
@@ -6,6 +7,16 @@
   [inspectorListIsValid]="inspectorListIsValid"
 >
 </app-issue-inspector-popup>
+<app-loading-complete-dialog
+  [visible]="formSubmitted"
+  [completed]="formCompleted"
+  [failed]="formFailed"
+  [header]="'Tạo mới kế hoạch triển khai'"
+  [progress]="'Đang tạo kế hoạch triển khai'"
+  [complete]="'Tạo kế hoạch triển khai thành công'"
+  [fail]="'Tạo kế hoạch triển khai không thành công'"
+>
+</app-loading-complete-dialog>
 <div class="container-fluid">
   <tui-breadcrumbs
     size="l"
@@ -89,7 +100,7 @@
         </div>
         <h6 class="mat-headline-6">Tài liệu công văn</h6>
         <div class="document" formGroupName="issueDocList">
-          <div class="row document-item mb-4 border-top rounded py-3 mx-0" formGroupName="issueDoc_1">
+          <div class="row document-item mb-4 border-top rounded py-2 mx-0" formGroupName="issueDoc_1">
             <div class="col-md-12 d-flex flex-row">
               <div class="col-md-6 pe-3">
                 <label class="fw-medium mb-1">Tên tài liệu<span class="p-error">*</span></label>
@@ -161,7 +172,7 @@
                     *ngIf="documentFirstCodeControls?.errors?.['maxlength']"
                     class="p-error"
                   >
-                  Tên tài liệu quá dài
+                  Mã tài liệu quá dài
                 </span>
                 </div>
               </div>
@@ -200,7 +211,7 @@
               </div>
             </div>
           </div>
-          <div class="row document-item mb-4 border-top rounded py-3 mx-0" formGroupName="issueDoc_2">
+          <div class="row document-item mb-4 border-top rounded py-2 mx-0" formGroupName="issueDoc_2">
             <div class="col-md-12 d-flex flex-row">
               <div class="col-md-6 pe-3">
                 <label class="fw-medium mb-1">Tên tài liệu<span class="p-error">*</span></label>
@@ -209,6 +220,25 @@
                   placeholder="Điền tên tài liệu"
                   formControlName="documentName"
                 />
+                <div
+                  *ngIf="
+                  documentSecondNameControls?.invalid &&
+                  (documentSecondNameControls?.touched || documentSecondNameControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentSecondNameControls?.errors?.['whitespace'] ||documentSecondNameControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng điền tên tài liệu
+                </span>
+                  <span
+                    *ngIf="documentSecondNameControls?.errors?.['maxlength']"
+                    class="p-error"
+                  >
+                  Tên tài liệu quá dài
+                </span>
+                </div>
               </div>
               <div class="col-md-3 pe-3">
                 <label class="fw-medium mb-1">Loại tài liệu<span class="p-error">*</span></label>
@@ -216,6 +246,19 @@
                             placeholder="Chọn loại tài liệu"
                             (onChange)="onChange2($event)">
                 </p-dropdown>
+                <div
+                  *ngIf="
+                  documentSecondTypeControls?.invalid &&
+                  (documentSecondTypeControls?.touched || documentSecondTypeControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentSecondTypeControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn loại
+                </span>
+                </div>
               </div>
               <div class="col-md-3">
                 <label class="fw-medium mb-1">Mã tài liệu<span class="p-error">*</span></label>
@@ -224,6 +267,25 @@
                   placeholder="Điền mã tài liệu"
                   formControlName="documentCode"
                 />
+                <div
+                  *ngIf="
+                  documentSecondCodeControls?.invalid &&
+                  (documentSecondCodeControls?.touched || documentSecondCodeControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentSecondCodeControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng điền mã
+                </span>
+                  <span
+                    *ngIf="documentSecondCodeControls?.errors?.['maxlength']"
+                    class="p-error"
+                  >
+                  Mã tài liệu quá dài
+                </span>
+                </div>
               </div>
             </div>
             <div class="col-md-12">
@@ -245,9 +307,22 @@
                   class="col-md-3"
                 ></button>
               </div>
+              <div
+                *ngIf="
+                  documentSecondFileControls?.invalid &&
+                  (documentSecondFileControls?.touched || documentSecondFileControls?.dirty)
+                "
+              >
+                <span
+                  *ngIf="documentSecondFileControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn tài liệu công văn
+                </span>
+              </div>
             </div>
           </div>
-          <div class="row document-item mb-4 border-top rounded py-3 mx-0" formGroupName="issueDoc_3">
+          <div class="row document-item mb-4 border-top rounded py-2 mx-0" formGroupName="issueDoc_3">
             <div class="col-md-12 d-flex flex-row">
               <div class="col-md-6 pe-3">
                 <label class="fw-medium mb-1">Tên tài liệu<span class="p-error">*</span></label>
@@ -256,6 +331,25 @@
                   placeholder="Điền tên tài liệu"
                   formControlName="documentName"
                 />
+                <div
+                  *ngIf="
+                  documentThirdNameControls?.invalid &&
+                  (documentThirdNameControls?.touched || documentThirdNameControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentThirdNameControls?.errors?.['whitespace'] ||documentThirdNameControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng điền tên tài liệu
+                </span>
+                  <span
+                    *ngIf="documentThirdNameControls?.errors?.['maxlength']"
+                    class="p-error"
+                  >
+                  Tên tài liệu quá dài
+                </span>
+                </div>
               </div>
               <div class="col-md-3 pe-3">
                 <label class="fw-medium mb-1">Loại tài liệu<span class="p-error">*</span></label>
@@ -263,6 +357,19 @@
                             placeholder="Chọn loại tài liệu"
                             (onChange)="onChange3($event)">
                 </p-dropdown>
+                <div
+                  *ngIf="
+                  documentThirdTypeControls?.invalid &&
+                  (documentThirdTypeControls?.touched || documentThirdTypeControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentThirdTypeControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn loại
+                </span>
+                </div>
               </div>
               <div class="col-md-3">
                 <label class="fw-medium mb-1">Mã tài liệu<span class="p-error">*</span></label>
@@ -271,6 +378,25 @@
                   placeholder="Điền mã tài liệu"
                   formControlName="documentCode"
                 />
+                <div
+                  *ngIf="
+                  documentThirdCodeControls?.invalid &&
+                  (documentThirdCodeControls?.touched || documentThirdCodeControls?.dirty)
+                "
+                >
+                <span
+                  *ngIf="documentThirdCodeControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng điền mã
+                </span>
+                  <span
+                    *ngIf="documentThirdCodeControls?.errors?.['maxlength']"
+                    class="p-error"
+                  >
+                  Mã tài liệu quá dài
+                </span>
+                </div>
               </div>
             </div>
             <div class="col-md-12">
@@ -292,11 +418,21 @@
                   class="col-md-3"
                 ></button>
               </div>
+              <div
+                *ngIf="
+                  documentThirdFileControls?.invalid &&
+                  (documentThirdFileControls?.touched || documentThirdFileControls?.dirty)
+                "
+              >
+                <span
+                  *ngIf="documentThirdFileControls?.errors?.['required']"
+                  class="p-error"
+                >
+                  Vui lòng chọn tài liệu công văn
+                </span>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-12 save-button w-100 mb-2">
-          <button class="btn text-white">Lưu kế hoạch</button>
         </div>
       </div>
       <div class="col-md-4 d-flex justify-content-start flex-column align-items-center">
@@ -310,6 +446,20 @@
           (recreateInspectorList)="resetInspectorList()"
         >
         </app-issue-inspector-list>
+        <div
+          class="mt-1"
+          *ngIf="issueForm.controls?.['inspectorId']?.invalid && (issueForm.controls?.['inspectorId']?.touched ||issueForm.controls?.['inspectorId']?.dirty)"
+        >
+          <span
+            *ngIf="issueForm.controls?.['inspectorId']?.errors?.['required']"
+            class="p-error"
+          >
+            Vui lòng chọn danh sách đoàn kiểm tra
+          </span>
+        </div>
+      </div>
+      <div class="col-md-12 text-center save-button w-100 mb-3">
+        <button class="btn text-white">Lưu kế hoạch</button>
       </div>
     </form>
   </div>
