--- a/src/app/features/post-login/issue/create-issue/create-issue.component.scss
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.scss
@@ -23,7 +23,7 @@
 }
 
 .document-item {
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px, rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
   .col-md-6, .col-md-3{
     input{
       width: 100%;
