--- a/src/app/features/post-login/user/user-detail/user-detail.component.scss
+++ b/src/app/features/post-login/user/user-detail/user-detail.component.scss
@@ -1,6 +1,6 @@
 @import "../../../../../assets/scss/base";
 
-*{
+* {
   font-size: 16px;
 }
 
@@ -16,6 +16,7 @@
     border-radius: 8px;
     border: solid 1px $primary;
     transition: all 0.5s ease;
+
     &:hover {
       background-color: $primary-hover;
       border-color: $primary-hover;
@@ -23,11 +24,22 @@
   }
 }
 
-::ng-deep .p-dropdown{
+::ng-deep .p-dropdown {
   width: 100%;
   border-radius: 8px;
 }
 
-.span-heading-color{
+.span-heading-color {
   color: #616161;
 }
+
+tui-avatar{
+  font-size: 8rem !important;
+  width: 250px !important;
+  height: 250px !important;
+}
+
+.user-name{
+  font-size: 1.5rem;
+}
+
