Add user update avatar

--- a/src/app/features/post-login/user/user-update/user-update.component.html
+++ b/src/app/features/post-login/user/user-update/user-update.component.html
@@ -15,79 +15,90 @@
   <h5 class="mat-headline-5">Cập nhật người dùng</h5>
   <form [formGroup]="updateForm">
     <div class="row">
-      <div class="col-md-5" *ngIf="user">
-        <div class="mb-3">
-          <label class="span-heading-color mb-2">Tên hiển thị</label>
-          <p class="fw-medium">{{user.fullName == null ? "Chưa nhập tên" : user.fullName}}</p>
+      <div class="col-md-4 row">
+        <div class="col-md-12 d-flex justify-content-center mb-3">
+          <tui-avatar
+            text="{{avatar}}"
+            [rounded]="true"
+            [autoColor]="true"
+            [size]="'xxl'"
+          ></tui-avatar>
         </div>
-        <div class="mb-3">
-          <label class="span-heading-color mb-2">Email</label>
-          <p class="fw-medium">{{user.email}}</p>
-        </div>
-        <div class="mb-3">
-          <label class="span-heading-color mb-2">Số điện thoại</label>
-          <p class="fw-medium">{{user.phoneNumber == null ? "Chưa nhập số điện thoại" : user.phoneNumber}}</p>
-        </div>
-        <div class="mb-3">
-          <label class="span-heading-color mb-2">Giới tính</label>
-          <p class="fw-medium">{{user.gender == "MALE" ? "Nam" : "Nữ"}}</p>
-        </div>
-        <div class="mb-3">
-          <label class="span-heading-color mb-2">Ngày sinh</label>
-          <p class="fw-medium">{{user.dob == null ? "Chưa nhập ngày sinh" : user.dob}}</p>
+        <div  class="col-md-12 text-center">
+          <p class="fw-medium user-name">{{user.fullName == null ? "Chưa nhập tên" : user.fullName}}</p>
         </div>
       </div>
-      <div class="col-md-5">
-        <div class="col-md-6 mb-3">
-          <label class="span-heading-color mb-2">Chức vụ</label>
-          <p-dropdown [options]="roles"
-                      optionLabel="roleName" [filter]="true"
-                      filterBy="roleName"
-                      [(ngModel)]="selectedRole"
-                      [ngModelOptions]="{standalone: true}"
-                      placeholder="Chọn 1 vai trò"
-                      (onChange)="patchRoleId()"
-                      *ngIf="isRoleUpdatable()"
-          >
-
-            <ng-template let-role pTemplate="item">
-              <div class="flex align-items-center gap-2">
-                <div>{{ role.roleName }}</div>
-              </div>
-            </ng-template>
-          </p-dropdown>
+      <div class="col-md-8 row">
+        <div class="col-md-6" *ngIf="user">
+          <div class="mb-3">
+            <label class="span-heading-color mb-2">Email</label>
+            <p class="fw-medium">{{user.email}}</p>
+          </div>
+          <div class="mb-3">
+            <label class="span-heading-color mb-2">Số điện thoại</label>
+            <p class="fw-medium">{{user.phoneNumber == null ? "Chưa nhập số điện thoại" : user.phoneNumber}}</p>
+          </div>
+          <div class="mb-3">
+            <label class="span-heading-color mb-2">Giới tính</label>
+            <p class="fw-medium">{{user.gender == "MALE" ? "Nam" : "Nữ"}}</p>
+          </div>
+          <div class="mb-3">
+            <label class="span-heading-color mb-2">Ngày sinh</label>
+            <p class="fw-medium">{{user.dob == null ? "Chưa nhập ngày sinh" : user.dob}}</p>
+          </div>
         </div>
-        <div class="col-md-6 mb-3" *ngIf="!isRoleUpdatable()">
-          <p class="font-weight-bold">
-            <ng-container *ngFor="let role of user.accountRoles; let last = last">
-              {{ role.role?.roleName }}{{ last ? '' : ';' }}
-            </ng-container>
-          </p>
-          <span class="p-error"
-                *ngIf="updateForm.get('roleId')?.hasError('min')  &&
+        <div class="col-md-6">
+          <div class="col-md-8 mb-3">
+            <label class="span-heading-color mb-2">Chức vụ</label>
+            <p-dropdown [options]="roles"
+                        optionLabel="roleName" [filter]="true"
+                        filterBy="roleName"
+                        [(ngModel)]="selectedRole"
+                        [ngModelOptions]="{standalone: true}"
+                        placeholder="Chọn 1 vai trò"
+                        (onChange)="patchRoleId()"
+                        *ngIf="isRoleUpdatable()"
+            >
+
+              <ng-template let-role pTemplate="item">
+                <div class="flex align-items-center gap-2">
+                  <div>{{ role.roleName }}</div>
+                </div>
+              </ng-template>
+            </p-dropdown>
+          </div>
+          <div class="col-md-8 mb-3" *ngIf="!isRoleUpdatable()">
+            <p class="font-weight-bold">
+              <ng-container *ngFor="let role of user.accountRoles; let last = last">
+                {{ role.role?.roleName }}{{ last ? '' : ';' }}
+              </ng-container>
+            </p>
+            <span class="p-error"
+                  *ngIf="updateForm.get('roleId')?.hasError('min')  &&
             ((this.updateForm.get('roleId')?.dirty ?? false) ||
                 (this.updateForm.get('roleId')?.touched ?? false) || this.isSubmitted)">
             Không được để trống mục này
           </span>
-        </div>
-        <div class="col-md-6 mb-3">
-          <label class="span-heading-color mb-2">Trạng thái</label>
-          <p-dropdown [options]="statusOptions"
-                      optionLabel="label"
-                      formControlName="isActive"
-                      optionValue="value"
-          >
-            <ng-template let-status pTemplate="item">
-              <p-tag
-                [rounded]="true"
-                [severity]="getStatusSeverity(status.value)"
-                [value]="status.label"
-              ></p-tag>
-            </ng-template>
-          </p-dropdown>
+          </div>
+          <div class="col-md-8 mb-3">
+            <label class="span-heading-color mb-2">Trạng thái</label>
+            <p-dropdown [options]="statusOptions"
+                        optionLabel="label"
+                        formControlName="isActive"
+                        optionValue="value"
+            >
+              <ng-template let-status pTemplate="item">
+                <p-tag
+                  [rounded]="true"
+                  [severity]="getStatusSeverity(status.value)"
+                  [value]="status.label"
+                ></p-tag>
+              </ng-template>
+            </p-dropdown>
+          </div>
         </div>
       </div>
-      <div class="">
+      <div class="col-md-12 text-center mt-5">
         <button type="submit" pButton
                 (click)="confirm()"
         >Cập nhật người dùng
