--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -30,7 +30,10 @@
               <div class="scrollview-item d-flex flex-row justify-content-between align-items-center p-2 h-full mx-1">
                 <div class=" d-flex flex-row justify-content-center align-items-center">
                   <div class="scrollview-item-icon">
-                    <img src="../../../../../../assets/img/user_icon.svg" alt=""/>
+                    <tui-avatar
+                    >
+
+                    </tui-avatar>
                   </div>
                   <div class="scrollview-item-content ms-3">
                     <span class="font-weight-bold">{{ item?.user?.fullName}}</span>
