--- a/src/app/features/post-login/user/user-update/user-update.component.scss
+++ b/src/app/features/post-login/user/user-update/user-update.component.scss
@@ -42,3 +42,13 @@
     margin-left: 30px;
   }
 }
+
+tui-avatar{
+  font-size: 8rem !important;
+  width: 250px !important;
+  height: 250px !important;
+}
+
+.user-name{
+  font-size: 1.5rem;
+}
