Add avatar for inspector list

--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -44,7 +44,12 @@
   }
   .reset-button {
     background-color: white;
-    color: $primary;
+    color: $primary !important;
     border: 1px solid $primary;
+    &:hover{
+      background-color: $primary-hover;
+      color: white !important;
+      border: 1px solid $primary-hover;
+    }
   }
 }
