--- a/src/app/features/post-login/assignment/assignment-detail/assignment-detail.component.html
+++ b/src/app/features/post-login/assignment/assignment-detail/assignment-detail.component.html
@@ -4,55 +4,73 @@
   [style]="{ width: '40vw', height: '500px' }"
   [draggable]="false"
   [resizable]="false"
+  [modal]="true"
 >
-  <div class="height-100">
-    <span class="font-weight-bold">Tên hồ sơ</span>
+  <div class="mb-4">
+    <label class="mb-1 span-heading-color">Tên hồ sơ</label>
     <br />
-    <span class="text-black-50"> {{ selectedAssignment?.assignmentName }}</span>
+    <span class="fw-medium p-content-fs">
+      {{ selectedAssignment?.assignmentName }}</span
+    >
   </div>
-  <div class="height-100">
-    <span class="font-weight-bold">Chi tiết hồ sơ</span>
+  <div class="mb-4">
+    <label class="mb-1 span-heading-color">Chi tiết hồ sơ</label>
     <br />
-    <span class="text-black-50"> {{ selectedAssignment?.description }}</span>
+    <span class="fw-medium p-content-fs">
+      {{ selectedAssignment?.description }}</span
+    >
   </div>
   <ng-container *ngIf="selectedAssignment?.task; else isTaskFalse">
     <div>
       <div class="d-flex justify-content-between">
         <div>
-          <span class="text-black-50">Tài liệu</span>
+          <label class="fw-medium mb-2">Tài liệu</label>
         </div>
       </div>
       <br />
       <div *ngIf="selectedAssignment.documents.length > 0">
         <div *ngFor="let item of selectedAssignment.documents; let i = index">
           <div class="row mb-3">
-            <div (click)="previewFile(item.documentLink, item.fileExtension)">
-              <div class="file-item px-3 py-1 row">
-                <div
-                  class="col-md-1 file-item-icon ml-5 d-flex justify-content-center align-items-center"
-                >
-                  <img [src]="getIconFileType(item.fileExtension)" alt="" />
+            <div
+              class="file-item py-1 d-flex"
+              (click)="openNewTab(item.documentLink, item.fileExtension)"
+              pTooltip="{{ item.documentName }}..{{
+                getFileExtension(item.fileExtension)
+              }}"
+              tooltipPosition="top"
+            >
+              <div
+                class="file-item-icon d-flex justify-content-center align-items-center"
+              >
+                <img [src]="getIconFileType(item.fileExtension)" alt="" />
+              </div>
+              <div class="row col-md-10 d-flex align-items-center mb-3">
+                <div class="col-md-8">
+                  <p class="mb-0">
+                    <span class="fw-medium"
+                      >{{ item.documentName }}.{{
+                        getFileExtension(item.fileExtension)
+                      }}</span
+                    ><span></span>
+                  </p>
+                  <p class="mb-0" *ngIf="item.documentCode">
+                    <span>Mã tài liệu: </span>
+                    <span class="fw-medium">{{ item.documentCode }}</span>
+                  </p>
                 </div>
-                <div class="col-md-11 file-item-content">
-                  <div class="row ms-2">
-                    <div class="col-md-8">
-                      <span class="font-weight-bold font-size-18">{{
-                        item.documentName
-                      }}</span>
-                      <br />
-                      <span
-                        ><span class="font-weight-bold">Mã:</span>
-                        {{ item.documentCode }}</span
-                      >
-                    </div>
-                    <div class="col-md-4">
-                      <span class="text-black-50">{{
-                        item.sizeFormat || item.file.size
-                      }}</span>
-                      <br />
-                      <span>{{ item.uploadedDate | date : "MM/dd/yyyy" }}</span>
-                    </div>
-                  </div>
+                <div class="col-md-4 text-end">
+                  <p class="mb-0">
+                    <!-- <span>Kích thước: </span> -->
+                    <span class="fw-medium">{{
+                      item.sizeFormat || item.file.size
+                    }}</span>
+                  </p>
+                  <p class="mb-0">
+                    <!-- <span>Ngày tạo: </span> -->
+                    <span class="fw-medium">{{
+                      item.uploadedDate | date : "dd/MM/yyyy"
+                    }}</span>
+                  </p>
                 </div>
               </div>
             </div>
@@ -63,19 +81,18 @@
   </ng-container>
   <ng-template #isTaskFalse>
     <div *ngIf="selectedAssignment?.children">
-      <span class="font-weight-bold">Danh sách thư mục/tài liệu</span>
+      <label class="fw-medium mb-2">Danh sách hồ sơ con</label>
       <br />
       <ul class="mt-1" *ngFor="let item of selectedAssignment.children">
-        <div class="row">
-          <div class="col-md-1">
-            <ng-container *ngIf="item.task">
-              <i class="bi bi-file-earmark-check-fill file-icon"></i>
-            </ng-container>
-            <ng-container *ngIf="!item.task">
-              <i class="bi bi-folder-fill folder-icon"></i>
-            </ng-container>
+        <div class="row children">
+          <div
+            class="col-md-1 d-flex justify-content-center align-items-center"
+          >
+            <i class="bi bi-folder-fill folder-icon"></i>
           </div>
-          <div class="col-md-7">
+          <div
+            class="col-md-11 d-flex justify-content-start align-items-center"
+          >
             {{ item.assignmentName }}
           </div>
         </div>
@@ -83,47 +100,76 @@
     </div>
   </ng-template>
 </p-dialog>
-<p-treeTable
-  [value]="assignments"
-  [scrollable]="true"
-  [style]="{ 'min-width': '50rem' }"
-  [scrollable]="true"
-  scrollHeight="600px"
+<p-dialog
+  #pdfDialog
+  header="Xem tài liệu"
+  [(visible)]="pdfPreviewVisibility"
+  [style]="{ width: '90vw', height: '100vh' }"
+  [draggable]="false"
+  [resizable]="false"
+  [maximizable]="true"
+  [modal]="true"
+  (onHide)="onHideFilePreviewEvent()"
 >
-  <ng-template pTemplate="caption">
-    <div class="d-flex justify-content-between align-items-center">
-      <div>
-        <h5 class="mat-headline-5 fw-medium">Danh sách hồ sơ {{ school?.schoolName }}</h5>
-      </div>
-    </div>
+  <div *ngIf="!pdfLoaded; else pdfIsLoaded" class="spinner">
+    <div class="spinner-border text-center" role="status"></div>
+    <p>Đang tải...</p>
+  </div>
+  <ng-template #pdfIsLoaded>
+    <iframe [src]="safePdfUrl" width="100%" height="99%"></iframe>
   </ng-template>
-  <ng-template pTemplate="header">
-    <tr>
-      <th>Hồ sơ</th>
-      <th></th>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="body" let-rowData let-rowNode>
-    <tr [ttRow]="rowNode" class="d-flex justify-content-between">
-      <td class="folder">
-        <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
-        <i class="bi bi-folder-fill folder-icon"></i>
-        {{ rowData.node.assignmentName }}
-      </td>
-      <ng-container>
-        <td class="d-flex">
-          <div
-            class="action-item d-flex justify-content-center align-items-center mx-2"
-            (click)="openDetail(rowData.node?.assignmentId)"
-          >
-            <i class="bi bi-info-circle-fill"></i>
+</p-dialog>
+<div class="container-fluid">
+  <h5 class="mat-headline-5 fw-medium">
+    Danh sách hồ sơ {{ school?.schoolName }}
+  </h5>
+  <div class="card">
+    <p-treeTable
+      [value]="assignments"
+      [scrollable]="true"
+      [style]="{ 'min-width': '50rem' }"
+      [scrollable]="true"
+      scrollHeight="600px"
+    >
+      <ng-template pTemplate="caption">
+        <div class="d-flex justify-content-between align-items-center">
+          <div>
+            <h6 class="mat-headline-6">Chi tiết hồ sơ</h6>
           </div>
-        </td>
-      </ng-container>
-      <ng-template #td>
-        <td></td>
+        </div>
       </ng-template>
-    </tr>
-  </ng-template>
-</p-treeTable>
+      <ng-template pTemplate="header">
+        <tr>
+          <th>Hồ sơ</th>
+          <th></th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-rowNode>
+        <tr [ttRow]="rowNode" class="d-flex justify-content-between">
+          <td class="folder">
+            <p-treeTableToggler [rowNode]="rowNode"></p-treeTableToggler>
+            <i class="bi bi-folder-fill folder-icon"></i>
+            {{ rowData.node.assignmentName }}
+          </td>
+          <ng-container>
+            <td class="d-flex">
+              <div
+                pTooltip="Chi tiết"
+                tooltipPosition="top"
+                class="action-item d-flex justify-content-center align-items-center mx-2"
+                (click)="openDetail(rowData.node?.assignmentId)"
+              >
+                <i class="bi bi-info-circle-fill"></i>
+              </div>
+            </td>
+          </ng-container>
+          <ng-template #td>
+            <td></td>
+          </ng-template>
+        </tr>
+      </ng-template>
+    </p-treeTable>
+  </div>
+</div>
+
 <p-toast key="errorAssDetail"></p-toast>
