--- a/src/app/components/notification-list/notification-list.component.html
+++ b/src/app/components/notification-list/notification-list.component.html
@@ -2,9 +2,8 @@
   <button type="button" id="dropdownBasic1" ngbDropdownToggle>
     <i class="bi bi-bell" pBadge [value]="badgeValue" severity="danger"></i>
   </button>
-  <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="notification-list overflow-auto">
+  <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class="notification-list">
     <div class="notification-heading fw-bolder text-center mb-2">Thông báo</div>
-    <div class="dropdown-divider"></div>
     <div class="notification-change-view ms-2 mb-2">
       <button type="button" class="fw-medium px-3 py-1" [class.button-active]="showAllNotification"
               (click)="onClickAllNotification()">Toàn bộ
@@ -13,13 +12,18 @@
               (click)="onClickUnseenNotification()">Chưa xem
       </button>
     </div>
-    <app-notification-list-all
-      *ngIf="showAllNotification"
-      [notificationItems]="notificationItems">
-    </app-notification-list-all>
-    <app-notification-list-unseen
-      *ngIf="!showAllNotification"
-      [unseenNotificationDtos]="unseenNotificationDtos">
-    </app-notification-list-unseen>
+    <div class="dropdown-divider"></div>
+    <div class="notification-item-list">
+      <app-notification-list-all
+        *ngIf="showAllNotification"
+        [notificationItems]="notificationItems">
+      </app-notification-list-all>
+      <app-notification-list-unseen
+        *ngIf="!showAllNotification"
+        [unseenNotificationDtos]="unseenNotificationDtos">
+      </app-notification-list-unseen>
+    </div>
+    <div class="dropdown-divider"></div>
+    <div class="notification-footer"></div>
   </div>
 </div>
